Udpate Max-width for both modals to fix visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
     }
 
+    
     button:hover,
     button:focus,
     .button:hover,
@@ -23,6 +24,11 @@
         margin: 5px;
     }
 
+    .pokemon-list{
+        /* align-items: center;
+        width: 100vw;
+        height: auto; */
+    }
 
 
     .modal h1 {
@@ -36,7 +42,7 @@
 
     /*Modal Styling*/
     #modal-container.is-visible {
-        display: inline-block;
+        display: block;
         position: fixed;
         padding: 15px;
         margin: auto;
@@ -44,11 +50,12 @@
         box-sizing: border-box;
         top: 0;
         left: 0;
-        width: 50%;
-        height: 50%;
-        max-width: 700px;
-        background: #fff;
+        width: 100%;
+        height: 100%;
+        background: rgba(15, 15, 15, 0.26);
         text-align: center;
+        align-self: center;
+       
 
         /* to show it above other content */
         z-index: 999;
@@ -67,7 +74,7 @@
         box-sizing: border-box;
         background: #fff;
         padding: 15px;
-        width: 80%;
+        width: 100%;
         max-width: 700px;
         text-align: center;
     }
